# skvoice

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: MUSETALK-INSTALL-PLAN.md
scripts/: musetalk-install.sh
scripts/hooks/: install.sh  pre-push
skvoice/: __init__.py  __main__.py  agent_profile.py  audio.py  config.py  emotion.py  llm.py  memory.py  service.py  tools.py
systemd/: skvoice.service
