[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skvoice"
version = "0.1.0"
description = "Sovereign Voice Agent Service for SKCapstone"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
    "websockets>=12.0",
    "anthropic>=0.40",
    "python-multipart>=0.0.6",
]

[project.scripts]
skvoice = "skvoice.__main__:main"

[tool.setuptools.packages.find]
include = ["skvoice*"]
