[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "skvoice"
dynamic = ["version"]
description = "Sovereign Voice Agent Service for SKCapstone"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
    "websockets>=12.0",
    "anthropic>=0.40",
    "python-multipart>=0.0.6",
]

[project.scripts]
skvoice = "skvoice.__main__:main"

[tool.setuptools.packages.find]
include = ["skvoice*"]

[tool.setuptools_scm]
version_file = "skvoice/_version.py"
fallback_version = "0.0.0+unknown"
